packages/astro/e2e/fixtures/errors/src/pages/astro-syntax-error.astro
<h1>{while (true){}}</h1>
